--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<ol>
+		<li data-ns-test>Car</li>
+		<li data-ns-test>IPhone</li>
+		<li data-ns-test>Home</li>
+	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
