--- a/main.html
+++ b/main.html
@@ -8,10 +8,15 @@
 
 <body>
 	<ol>
-		<li data-ns-test>Car</li>
-		<li data-ns-test>IPhone</li>
-		<li data-ns-test>Home</li>
+		<li data-ns-test="shoppingList">Car</li>
+		<li data-ns-test="shoppingList">IPhone</li>
+		<li data-ns-test="shoppingList">Home</li>
 	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Dubai</li>
+		<li data-ns-test="holidayList">Manali</li>
+		<li data-ns-test="holidayList">Istanbul</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
